--- a/PCSD Control Panel/App.config
+++ b/PCSD Control Panel/App.config
@@ -19,6 +19,15 @@
             <setting name="update_speed" serializeAs="String">
                 <value>1000</value>
             </setting>
+            <setting name="status" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="appName" serializeAs="String">
+                <value>PCSD Control Panel</value>
+            </setting>
+            <setting name="autoStartup" serializeAs="String">
+                <value>False</value>
+            </setting>
         </PCSD_Control_Panel_2._0.Properties.Settings>
     </userSettings>
     <applicationSettings>
