--- a/PCSD Control Panel/PCSD Control Panel.csproj
+++ b/PCSD Control Panel/PCSD Control Panel.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="OpenHardwareMonitorLibNet" Version="2023.11.10.1755" />
+    <PackageReference Include="System.IO.Ports" Version="8.0.0" />
     <PackageReference Include="System.Management" Version="8.0.0" />
   </ItemGroup>
 
